test/data/semantic-errors/forloop-counter-non-integer-index.ava
for "this many" times { ava "Hello"; };